# backend/src/routes/index.ts
@@ -5,7 +5,6 @@ import userRoutes from "./user.route";
 import walletRoutes from "./wallet.route";
 import transactionRoutes from "./transaction.route";
 import categoryRoutes from "./category.route";
-import goalRoutes from "./goal.route";
 import budgetRoutes from "./budget.route";
 import currencyRoutes from "./currency.route";
 import notificationRoutes from "./notification.route";
@@ -26,7 +25,6 @@ router.use("/users", userRoutes);
 router.use("/wallets", walletRoutes);
 router.use("/transactions", transactionRoutes);
 router.use("/categories", categoryRoutes);
-router.use("/goals", goalRoutes);
 router.use("/budgets", budgetRoutes);
 router.use("/currencies", currencyRoutes);
 router.use("/notifications", notificationRoutes);
